update enc module