@@ -7,15 +7,14 @@ import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
+
 // 아파치로 변경 예정
-
-
 
 //자바 API https://docs.oracle.com/javase/7/docs/api/javax/crypto/Cipher.html
 //https://docs.oracle.com/javase/7/docs/api/
         //http://changki.net/ (한글)
+// https://stackoverflow.com/questions/5549464/import-sun-misc-base64encoder-results-in-error-compiled-in-eclipse/5549514#5549514
 
 //http://jo.centis1504.net/?p=137
 //http://m.blog.daum.net/_blog/_m/articleView.mwav?blogid=0Z2do&articleno=2
@@ -37,7 +36,6 @@ public class AesEncryption {
  
     public static final String sKey = "Mwav.net";
     public static final String sInitVector = "Mwav";
-    
     
     //ECB 시작
 	public static byte[] aesEncryptEcb(String sKey, String sText) { //1. ECB 모드로 암호화 
@@ -227,7 +225,7 @@ public class AesEncryption {
     public static byte[] aesDecodeBuf (String decryptVariable) throws IOException{
     
     	byte[] decryptVarDecoding = null;
-    	decryptVarDecoding = new BASE64Decoder().decodeBuffer(decryptVariable);  // 2진데이터를 문자로 변경 
+    	decryptVarDecoding = Base64.getDecoder().decode(decryptVariable); //   BASE64Decoder().decodeBuffer(decryptVariable);  // 2진데이터를 문자로 변경
 		
     	return decryptVarDecoding;
     }
@@ -235,8 +233,7 @@ public class AesEncryption {
   //BaseEncoding  암호화된 기본 값이 base64 encode
     public static String aesEncodeBuf (byte[] encryptVariable) throws IOException{ 
     
-    	String encryptEncoding = new BASE64Encoder().encode(encryptVariable);
-		
+    	String encryptEncoding = Base64.getEncoder().encodeToString(encryptVariable);
     	return encryptEncoding;
     }
     
